# simple_memcache

./: .gitignore  CMakeLists.txt  README.md  log.cc  objclient.py  objworker.cc
